samples/_failures_safe/1761314343_787472_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c6cbd165.c:189:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  189 | void freeGraph
      | ^~~~
